# ir-vista-mapping

./: .gitignore  Dockerfile.rtabmap_standalone  README.md
backend/: main.py  requirements.txt
backend/routers/: audio.py  capture.py  downloads.py  pipeline.py
config/presets/: garage-regen-grid.yaml  outdoor.yaml
frontend/: index.html
frontend/src/: App.tsx  types.ts
frontend/src/components/: Input.tsx  ParamField.tsx  Select.tsx
frontend/src/hooks/: useLogStream.ts
models/: superpoint_v1.pt
src/: process_svo.py  run_pipeline.py  svo_export.py  svo_recording.py
tools/ZedSvo/: CMakeLists.txt
